Improved readability of project features list and fixed incorrect calculator summary

--- a/assignments/4/styles/styles.css
+++ b/assignments/4/styles/styles.css
@@ -258,6 +258,9 @@ body.site {
 .project-list {
     text-align: left;
 }
+.project .list li {
+    margin-bottom: 10px;
+}
 
 .site-footer {
     background-color: var(--footer-bg);
